<resources>
    <string name="app_name">Marketim</string>
    <string name="trl_app_name">MARKETİM</string>
    <string name="trl_login">Login</string>
    <string name="trl_remember_me">Remember Me</string>
    <string name="trl_hint_username">username</string>
    <string name="trl_hint_password">password</string>
    <string name="trl_orders">My Orders</string>
    <string name="trl_logout">Logout</string>
    <string name="trl_please_wait">Please wait</string>
    <string name="trl_logout_message">Will be logout. Are yor sure ?</string>
    <string name="trl_yes">Yes</string>
    <string name="trl_no">No</string>
    <string name="trl_login_error">Please check your fields</string>
    <string name="trl_no_internet_connection">Sorry, you don\'t have internet connection :(</string>
    <string name="trl_no_data_message">NO DATA FOUND</string>
    <string name="trl_something_went_wrong">Something went wrong.Please try again</string>
</resources>
